// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c6 {
  box-sizing: border-box;
  max-width: 600px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c11 {
  box-sizing: border-box;
  text-align: center;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  border-radius: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border: 1px solid;
  box-sizing: border-box;
  background-color: transparent;
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  outline: none;
  opacity: .56;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all .3s;
  -webkit-font-smoothing: antialiased;
  border-color: rgba(255,255,255,0.87);
  color: #FFFFFF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 24px;
  width: 224px;
  border-color: rgba(255,255,255,0.87);
  color: rgba(255,255,255,0.87);
}

.c13:hover {
  opacity: 1;
}

.c13:active {
  opacity: .24;
}

.c13 > span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c13:hover,
.c13:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13:hover,
.c13:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  display: block;
  outline: none;
  margin-bottom: 24px;
  margin-left: auto;
  margin-right: auto;
  height: 160px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  margin: 0px;
  font-weight: 400;
}

.c4 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  background-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c2 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  position: relative;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          Kubernetes
        </div>
      </div>
    </div>
    <div
      class="c4 sc-AxirZ c5"
      width="100%"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <img
            class="c8"
            height="160px"
            src="file_stub"
          />
          <div
            class="c9"
            font-size="24"
            font-weight="700"
          >
            Add your first Kubernetes cluster to Teleport
          </div>
          <div
            class="c10"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Kubenetes Access provides secure access to Kubernetes clusters.
          </div>
        </div>
        <div
          class="c11"
        >
          <button
            class="c12"
            kind="primary"
            width="224px"
          >
            Add 
            kubernetes
          </button>
          <a
            class="c13"
            href="https://goteleport.com/docs/kubernetes-access/guides"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            <span>
              View Documentation
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c4 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c24:active {
  opacity: 0.56;
}

.c24:hover,
.c24:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c24:active {
  opacity: 0.24;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c29 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c20 {
  box-sizing: border-box;
  display: flex;
}

.c26 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c27 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c22 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c22 > thead > tr > th,
.c22 > tbody > tr > th,
.c22 > tfoot > tr > th,
.c22 > thead > tr > td,
.c22 > tbody > tr > td,
.c22 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c22 > thead > tr > th:first-child,
.c22 > tbody > tr > th:first-child,
.c22 > tfoot > tr > th:first-child,
.c22 > thead > tr > td:first-child,
.c22 > tbody > tr > td:first-child,
.c22 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c22 > thead > tr > th:last-child,
.c22 > tbody > tr > th:last-child,
.c22 > tfoot > tr > th:last-child,
.c22 > thead > tr > td:last-child,
.c22 > tbody > tr > td:last-child,
.c22 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c22 > tbody > tr > td {
  vertical-align: baseline;
}

.c22 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c22 > thead > tr > th .c18 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c22 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c22 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c22 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c25 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c23 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-bottom: 4px;
  margin-right: 4px;
  cursor: pointer;
}

.c28 {
  background: none;
  border: none;
  cursor: pointer;
}

.c28 .c18 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c28:hover .c18,
.c28:focus .c18 {
  opacity: 1;
}

.c28:disabled {
  cursor: default;
}

.c28:disabled .c18 {
  opacity: 0.1;
}

.c11 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c9 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c10 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-right: 184px;
}

.c10:hover,
.c10:focus,
.c10:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c10::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c13 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c13[disabled] {
  cursor: default;
}

.c16 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c16:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #651FFF;
}

.c14 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c14:checked + .c15 {
  background: #512FC9;
}

.c14:checked + .c15:before {
  transform: translate(16px,-50%);
}

.c14:disabled + .c15 {
  background: #222C59;
}

.c14:disabled + .c15:before {
  background: #455a64;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c2 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        Kubernetes
      </div>
    </div>
  </div>
  <div
    class="c4"
    kind="danger"
  >
    <div>
      server error
    </div>
  </div>
  <form
    class="c5"
  >
    <div
      class="c6"
      width="100%"
    >
      <div
        class="c7"
        style="width: 70%;"
      >
        <div
          class="c8"
          width="100%"
        >
          <div
            class="c9"
          >
            <input
              class="c10"
              placeholder="SEARCH..."
              value=""
            />
            <div
              class="c11"
            >
              <div
                class="c12"
              >
                <label
                  class="c13"
                >
                  <input
                    class="c14"
                    type="checkbox"
                  />
                  <div
                    class="c15 c16"
                  />
                </label>
                <div
                  class="c17"
                >
                  Advanced
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="line-height: 0px;"
        >
          <span
            class="c18 c19 icon icon-info_outline "
            color="light"
            style="cursor: pointer; font-size: 20px;"
          />
        </div>
      </div>
      <div
        class="c20"
      >
        <div
          class="c21"
          color="primary.contrastText"
        >
          SHOWING 
          <strong>
            1
          </strong>
           - 
          <strong>
            3
          </strong>
           of
           
          <strong>
            3
          </strong>
        </div>
      </div>
    </div>
  </form>
  <table
    class="c22"
  >
    <thead>
      <tr>
        <th>
          <a>
            Name
            <span
              class="c18 c19 icon icon-chevron-up "
              color="light"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Labels
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          tele.logicoma.dev-prod
        </td>
        <td>
          <div
            class="c23"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
          <div
            class="c23"
            kind="secondary"
          >
            env: prod
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c24"
            kind="border"
          >
            Connect
          </button>
        </td>
      </tr>
      <tr>
        <td>
          tele.logicoma.dev-staging
        </td>
        <td>
          <div
            class="c23"
            kind="secondary"
          >
            env: staging
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c24"
            kind="border"
          >
            Connect
          </button>
        </td>
      </tr>
      <tr>
        <td>
          cookie
        </td>
        <td>
          <div
            class="c23"
            kind="secondary"
          >
            cluster-name: some-cluster-name
          </div>
          <div
            class="c23"
            kind="secondary"
          >
            env: idk
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c24"
            kind="border"
          >
            Connect
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="c25"
  >
    <div
      class="c26"
      width="100%"
    >
      <div
        class="c27"
      />
      <div
        class="c20"
      >
        <button
          class="c28"
          disabled=""
          title="Previous page"
        >
          <span
            class="c18 c29 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          class="c28"
          disabled=""
          title="Next page"
        >
          <span
            class="c18 c29 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </div>
  </nav>
  
</div>
`;

exports[`loaded 1`] = `
.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c4:active {
  opacity: 0.56;
}

.c4:hover,
.c4:focus {
  background: #651FFF;
}

.c4:active {
  background: #354AA4;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c24:active {
  opacity: 0.56;
}

.c24:hover,
.c24:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c24:active {
  opacity: 0.24;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c29 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c20 {
  box-sizing: border-box;
  display: flex;
}

.c26 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c27 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c22 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c22 > thead > tr > th,
.c22 > tbody > tr > th,
.c22 > tfoot > tr > th,
.c22 > thead > tr > td,
.c22 > tbody > tr > td,
.c22 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c22 > thead > tr > th:first-child,
.c22 > tbody > tr > th:first-child,
.c22 > tfoot > tr > th:first-child,
.c22 > thead > tr > td:first-child,
.c22 > tbody > tr > td:first-child,
.c22 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c22 > thead > tr > th:last-child,
.c22 > tbody > tr > th:last-child,
.c22 > tfoot > tr > th:last-child,
.c22 > thead > tr > td:last-child,
.c22 > tbody > tr > td:last-child,
.c22 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c22 > tbody > tr > td {
  vertical-align: baseline;
}

.c22 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c22 > thead > tr > th .c18 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c22 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c22 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c22 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c25 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c23 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-bottom: 4px;
  margin-right: 4px;
  cursor: pointer;
}

.c28 {
  background: none;
  border: none;
  cursor: pointer;
}

.c28 .c18 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c28:hover .c18,
.c28:focus .c18 {
  opacity: 1;
}

.c28:disabled {
  cursor: default;
}

.c28:disabled .c18 {
  opacity: 0.1;
}

.c11 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c9 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c10 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-right: 184px;
}

.c10:hover,
.c10:focus,
.c10:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c10::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c13 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c13[disabled] {
  cursor: default;
}

.c16 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c16:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #651FFF;
}

.c14 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c14:checked + .c15 {
  background: #512FC9;
}

.c14:checked + .c15:before {
  transform: translate(16px,-50%);
}

.c14:disabled + .c15 {
  background: #222C59;
}

.c14:disabled + .c15:before {
  background: #455a64;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c2 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        Kubernetes
      </div>
      <button
        class="c4"
        kind="primary"
        title=""
        width="240px"
      >
        Add 
        kubernetes
      </button>
    </div>
  </div>
  <form
    class="c5"
  >
    <div
      class="c6"
      width="100%"
    >
      <div
        class="c7"
        style="width: 70%;"
      >
        <div
          class="c8"
          width="100%"
        >
          <div
            class="c9"
          >
            <input
              class="c10"
              placeholder="SEARCH..."
              value=""
            />
            <div
              class="c11"
            >
              <div
                class="c12"
              >
                <label
                  class="c13"
                >
                  <input
                    class="c14"
                    type="checkbox"
                  />
                  <div
                    class="c15 c16"
                  />
                </label>
                <div
                  class="c17"
                >
                  Advanced
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="line-height: 0px;"
        >
          <span
            class="c18 c19 icon icon-info_outline "
            color="light"
            style="cursor: pointer; font-size: 20px;"
          />
        </div>
      </div>
      <div
        class="c20"
      >
        <div
          class="c21"
          color="primary.contrastText"
        >
          SHOWING 
          <strong>
            1
          </strong>
           - 
          <strong>
            3
          </strong>
           of
           
          <strong>
            3
          </strong>
        </div>
      </div>
    </div>
  </form>
  <table
    class="c22"
  >
    <thead>
      <tr>
        <th>
          <a>
            Name
            <span
              class="c18 c19 icon icon-chevron-up "
              color="light"
            />
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Labels
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          tele.logicoma.dev-prod
        </td>
        <td>
          <div
            class="c23"
            kind="secondary"
          >
            kernel: 4.15.0-51-generic
          </div>
          <div
            class="c23"
            kind="secondary"
          >
            env: prod
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c24"
            kind="border"
          >
            Connect
          </button>
        </td>
      </tr>
      <tr>
        <td>
          tele.logicoma.dev-staging
        </td>
        <td>
          <div
            class="c23"
            kind="secondary"
          >
            env: staging
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c24"
            kind="border"
          >
            Connect
          </button>
        </td>
      </tr>
      <tr>
        <td>
          cookie
        </td>
        <td>
          <div
            class="c23"
            kind="secondary"
          >
            cluster-name: some-cluster-name
          </div>
          <div
            class="c23"
            kind="secondary"
          >
            env: idk
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c24"
            kind="border"
          >
            Connect
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <nav
    class="c25"
  >
    <div
      class="c26"
      width="100%"
    >
      <div
        class="c27"
      />
      <div
        class="c20"
      >
        <button
          class="c28"
          disabled=""
          title="Previous page"
        >
          <span
            class="c18 c29 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          class="c28"
          disabled=""
          title="Next page"
        >
          <span
            class="c18 c29 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </div>
  </nav>
  
</div>
`;

exports[`readonly empty state 1`] = `
.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c4 {
  box-sizing: border-box;
  max-width: 664px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: rgba(255,255,255,0.87);
  background-color: #222C59;
  text-align: center;
  border-radius: 12px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c2 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
  position: relative;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          Kubernetes
        </div>
      </div>
    </div>
    <div
      class="c4"
      color="text.primary"
    >
      <div
        class="c5"
      >
        No Kubernetes Clusters Found
      </div>
      <div
        class="c6"
      >
        Either there are no 
        kubernetes clusters
         in the "
        <span
          class="c7"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
